# spritepacker

./: Cargo.toml  ChangeLog.md  ReadMe.md
.github/ISSUE_TEMPLATE/: bug_report.yml  contact.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: main.yml
src/: main.rs
src/app/: app.rs  i18n.rs  mod.rs  settings.rs
src/components/: switch.rs
src/tk2d/: anim.rs  clip.rs  cln.rs  sprite.rs
